# swarm-traders

./: .gitignore  ARCHITECTURE.md  CONTEXT.md  PLAN.md  README.md  Swarm-Traders-Brief.docx  issues.md
backend/: .env.example  pyproject.toml
backend/alpha_swarms/: agents.py  app.py  events.py  graph.py  grounding.py  ingest.py  llm.py  manifest.py  models.py  replay.py  runner.py  safeguards.py  scoring.py  sec_edgar.py  slices.py  snapshot.py  tools.py
backend/data/: spend.json
backend/data/manifests/: AAPL_2026-06-05.json  AMZN_2026-06-01.json  GLD_2026-06-01.json  META_2026-06-26.json  MSFT_2026-05-01.json  MSFT_2026-06-26.json  MU_2026-06-30.json  NVDA_2026-06-01.json
backend/data/outcomes/: AAPL_2026-06-05.json  AAPL_2026-06-30.json  AMZN_2026-06-01.json  META_2026-05-01.json  META_2026-06-26.json  MSFT_2026-05-01.json  MSFT_2026-06-03.json  MSFT_2026-06-26.json  MU_2026-07-13.json  NVDA_2026-06-01.json  NVDA_2026-07-02.json  PLTR_2026-06-01.json  SPCX_2026-06-12.json  SPCX_2026-06-29.json
backend/data/runs/: AAPL_2026-06-05_anthropic-claude-haiku-4.5_20260714T134414Z_20168_116245580.json  AAPL_2026-06-30_20260704T020636Z_35496_784e925fe0c0.json  AMZN_2026-06-01_llama3.1-latest_20260705T144946Z_10470_75d1f2f6aa40.json  (+15 more)
backend/data/snapshots/: MU_2026-06-18.json  (+20 more)
backend/scripts/: build_snapshot.py  export_manifests.py  pretty_print.py
backend/tests/: conftest.py  fakes.py  test_debate.py  test_grounding.py  test_manifest.py  test_replay.py  test_safeguards.py  test_scoring.py  test_sec_edgar.py  test_snapshot.py  test_tools.py  test_walking_skeleton.py
(+61 files in other folders)
