[project]
name = "alpha-swarms"
version = "0.1.0"
description = "Swarm-of-analysts research system — backend (FastAPI + LangGraph)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-groq>=0.2",
    "pydantic>=2.8",
    "yfinance>=0.2.40",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
    "langchain-openai>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
